Fixes #15 - left panel text should wrap - moved the button to a link so that the text can wrap - added a simple badge in the accordion heading to show the number of sections in that topic

--- a/public/scss/app.scss
+++ b/public/scss/app.scss
@@ -225,7 +225,7 @@ $secondaryButtonColor: blue;
 
     .sectionContainer {
       @extend .absPos;
-      top: 40px;
+      top: 42px;
       overflow: auto;
 
       .section {
